test/ProvarANT/00D20000000m8SbEAI/objects/SFGA__Google_Campaign__c.object
<CustomObject>
    <description>Google AdWords Campaigns are high-level marketing initiatives</description>
    <fields>
        <fullName>SFGA__Google_Campaign_Description__c</fullName>
        <label>Google Campaign Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Google_Campaign_ID__c</fullName>
        <description>Unique Identifier of the Google Campaign</description>
        <label>Google Campaign ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>R00N40000001HggqEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFGA__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>R00N40000001HggrEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Google Campaign</label>
    <nameField>
        <label>Google Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Google Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>